# F1PyStats

./: .bumpversion.cfg  .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FormulaPy.py  README.md  Release_inst.md  mypy.ini  noxfile.py  pyproject.toml  sample-file  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-🐛.md  bug_report.md  feature-request-🚀.md  feature-request.md
.github/workflows/: flake8.yml  gh-pages.yml  greetings.yml  pylint.yml  python-package.yml
F1PyStats/: F1PyStats.py  __init__.py  constructor_results.py  constructors_results.py  driver_results.py  drivers_results.py  race_results.py  race_schedule.py  race_winners.py
FormulaPy/: __init__.py
docs/: conf.py  f1pystats.rst  index.rst
f1pystats/: __init__.py  constructor_info.py  constructor_results.py  driver_info.py  driver_results.py  f1pystats.py  finishing_status.py  lap_times.py  pit_stops.py  qualifying_results.py  race_circuits.py  race_schedule.py  race_winners.py  sprint_results.py
src/: FormulaPy.py  race_results.py
tests/: conftest.py  first_3_races_2008.json  test_constructor_results.py  test_driver_info.py  test_driver_results.py  test_finishing_status.py  test_lap_times.py  test_package.py  test_pitstops.py  test_qualifying_results.py  test_race_schedule.py  test_race_winners.py  test_sprint_results.py  top_3_2008.json
tests/module_tests/: test_constructor_info.py  test_constructor_results.py  test_driver_info.py  test_driver_results.py  test_finishing_status.py  test_lap_times.py  test_pitstops.py  test_qualifying_results.py  test_race_circuits.py  test_race_schedule.py  test_race_winners.py  test_sprint_results.py
tests/package_tests/: BaseTestClass.py  base_test_class.py  test_constructor_standings.py  test_driver_standings.py  test_fastest_laps.py  test_finishing_status.py  test_get_circuits.py  test_get_constructors.py  test_get_drivers.py  test_lap_times.py  test_pit_stops.py  test_qualifying_results.py  test_race_table.py  test_race_winners.py  test_util.py  (+1 more)
(+32 files in other folders)
