[tool.poetry]
name = "f1pystats"
version = "0.1.0"
description = "F1PyStats is an open-source Python3 package that provides Formula 1 data/statistics to developers"
authors = ["Gaurav Kolekar <gaurav.kolekar01@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
coverage = "^6.4.4"
pytest = "^7.1.3"
nox = "^2022.8.7"
mypy = "^0.971"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-mock = "^3.8.2"
nox-poetry = "^1.0.1"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.9.23"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
Sphinx = "^5.2.3"
sphinx-autodoc-typehints = "^1.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
