[tool.poetry]
name = "f1pystats"
version = "0.1.1"
description = "F1PyStats is an open-source Python3 package that provides Formula 1 data/statistics to developers"
authors = [
    "Alec Ramdhan <akramdhan02@gmail.com>",
    "Gaurav Kolekar <gaurav.kolekar01@gmail.com>",
]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "f1pystats" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
coverage = "^6.4.4"
pytest = "^7.2.0"
nox = "^2022.11.21"
mypy = "^1.0"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-mock = "^3.8.2"
nox-poetry = "^1.0.1"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.9.23"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
Sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.22.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.10"
furo = "^2023.3.27"
toml = "^0.10.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
